# EcoLoop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  deps.py  main.py  models.py
backend/app/api/: __init__.py  analytics_api.py  snapshots_api.py  status_api.py
backend/app/carbon/: calculator.py  factors.py
backend/app/coach/: __init__.py  gemini_advisor.py  rules_advisor.py
backend/app/engine/: __init__.py  calculator_service.py  constants.py
backend/app/insights/: gemini.py  rules.py
backend/app/middleware/: __init__.py  rate_limiter.py
backend/app/repository/: base.py  firestore_repo.py  memory_repo.py
backend/app/routes/: calculate.py  entries.py  health.py
backend/app/storage/: __init__.py  base_store.py  firestore_store.py  memory_store.py
backend/tests/: conftest.py  test_api.py  test_calculator.py  test_config.py  test_deps.py  test_firestore_store.py  test_gemini.py  test_memory_repo.py  test_models.py  test_rate_limiter.py  test_rules.py  test_spa.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/components/: CalculatorForm.test.tsx  CalculatorForm.tsx  ErrorBoundary.tsx  HistoryPanel.tsx  InsightsPanel.tsx  ResultBreakdown.tsx
frontend/src/hooks/: useFootprint.test.ts  useFootprint.ts
frontend/src/lib/: api.ts  deviceId.ts  format.test.ts  format.ts  types.ts
src/app/: globals.css  page.tsx
src/utils/: habitPresets.ts
(+18 files in other folders)
