[project]
name = "carbon-platform-backend"
version = "1.0.0"
description = "Carbon Footprint Awareness Platform — FastAPI backend"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# E501: line length handled by formatter; B008: FastAPI's Depends/Query/Path
# default-argument pattern is intentional and idiomatic.
ignore = ["E501", "B008"]
