[project]
name = "carbon-platform-backend"
version = "1.1.0"
description = "Carbon Footprint Awareness Platform — FastAPI backend"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=90"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "ANN", "B", "C4", "SIM", "PL", "C90", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "PLR2004"]

[tool.mypy]
strict = true
files = ["app"]
python_version = "3.10"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["google.*", "google.cloud.*"]
ignore_missing_imports = true
